Fixed issues regarding group wall (5684, 5682, 5283)
- placed remove button in-line with the creator's name
- changed style for remove button
- added word-break to fix overlapping text in comments and group news
- made url clickable links in comments

--- a/css/groups.less
+++ b/css/groups.less
@@ -5,13 +5,13 @@
 
 	position : relative;
 	top      : -85px;
-    /* center the element */
-    right        : 0;
-    left         : 0;
-    margin-right : auto;
-    margin-left  : auto;
-    /* give it dimensions */
-    width: 160px;
+	/* center the element */
+	right        : 0;
+	left         : 0;
+	margin-right : auto;
+	margin-left  : auto;
+	/* give it dimensions */
+	width: 160px;
 }
 
 #groupSection {
@@ -234,7 +234,7 @@
 		}
 
 		.close {
-			float       : none;
+			float       : right;
 			margin-left : 3px;
 		}
 	}
@@ -267,11 +267,12 @@
 		}
 
 		.comment-main {
-			margin: 15px 0 15px 20px;
-			padding-top: 15px;
+			margin      : 15px 0 15px 20px;
+			padding-top : 15px;
+			word-break  : break-all;
 
 			p {
-				line-height: 1.5em;
+				line-height : 1.5em;
 			}
 		}
 	}
@@ -294,7 +295,8 @@
 		}
 
 		.text {
-			padding-left: 40px;
+			padding-left : 40px;
+			word-break   : break-all;
 
 			p {
 				line-height: 1.5em;
